--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
 
           {(showLogin || showDashboard) && (
             <div
-              className="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
+              className="fixed inset-1 bg-black bg-opacity-50 flex items-center justify-center z-50"
               style={{
-                backgroundImage: "url('https://i.imgur.com/sD2WbZM.webp')",
+                backgroundImage: "url('https://i.imgur.com/NUeQpDa_d.webp?maxwidth=760&fidelity=grand')",
                 backgroundSize: "cover",
                 backgroundPosition: "center",
                 minHeight: "100vh",
