--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NEMINO - خرید و فروش بازی‌های دیجیتال</title>
@@ -59,6 +63,11 @@
     .phone-input-container input::placeholder {
       color: #9ca3af;
       opacity: 0.6;
+    }
+    .neon-border {
+      border-radius: 15px;
+      box-shadow: 0 0 15px #a855f7, 0 0 30px #a855f7, 0 0 50px #a855f7, 0 0 70px #a855f7;
+      margin-top: 40px;
     }
   </style>
 </head>
@@ -192,9 +201,9 @@
 
           {(showLogin || showDashboard) && (
             <div
-              className="fixed inset-1 bg-black bg-opacity-50 flex items-center justify-center z-50"
+              className="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
               style={{
-                backgroundImage: "url('https://i.imgur.com/NUeQpDa_d.webp?maxwidth=760&fidelity=grand')",
+                backgroundImage: "url('https://i.imgur.com/sD2WbZM.webp')",
                 backgroundSize: "cover",
                 backgroundPosition: "center",
                 minHeight: "100vh",
@@ -395,14 +404,6 @@
             <nav className="bg-gray-800 p-4 shadow-lg fixed w-full top-0 z-40">
               <div className="container mx-auto flex justify-between items-center">
                 <div className="flex items-center space-x-2">
-                  <img
-                    src="https://i.imgur.com/n5MJnc5.webp"
-                    alt="NEMINO"
-                    className="h-12 w-auto"
-                  />
-                  <div className="text-2xl font-bold text-purple-400">NEMINO</div>
-                </div>
-                <div className="flex space-x-4">
                   <a href="#" className="text-white hover:text-purple-400 transition">
                     <i className="fas fa-home ml-1"></i> خانه
                   </a>
@@ -420,21 +421,31 @@
                   <a href="#" className="text-white hover:text-purple-400 transition">
                     <i className="fas fa-shopping-cart ml-1"></i> سبد خرید
                   </a>
+                  <div className="flex space-x-4">
+                    <div className="text-2xl font-bold text-purple-400">NEMINO</div>
+                    <img
+                      src="https://i.imgur.com/XTaZBQw.png"
+                      alt="NEMINO"
+                      className="h-12 w-auto"
+                    />
+                  </div>
                 </div>
               </div>
             </nav>
 
-            <div className="pt-20">
+            <div className="pt-15">
               <div className="relative h-96 bg-cover bg-center">
                 <a href="#">
-                  <img
-                    src="https://i.imgur.com/n5MJnc5.webp"
-                    alt="نمینو"
-                    className="w-full h-full object-cover"
-                  />
+                  <center>
+                    <img
+                      src="https://i.imgur.com/NUeQpDa_d.webp?maxwidth=760&fidelity=grand"
+                      alt="نمینو"
+                      className="w-450 h-100 object-cover neon-border"
+                    />
+                  </center>
                 </a>
               </div>
-
+                  
               <div className="container mx-auto py-12">
                 <h2 className="text-3xl font-bold mb-8 text-center">محصولات ویژه</h2>
                 <div className="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
