--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
             <nav className="bg-gray-800 p-1 shadow-lg fixed w-full top-0 z-40">
               <div className="container mx-auto flex justify-between items-center">
                 <center>
-                  <a href="https://www.nemino.ir" className="text-yellow-200 hover:text-red-500 transition">
+                  <a href="NEMINO-APP" className="text-yellow-200 hover:text-red-500 transition">
                    &nbsp; دریافت بازی نمینو &nbsp;<i className="fas fa-gamepad ml-1"></i>
                   </a>
                 </center>
@@ -706,7 +706,7 @@
                     <i className="fas fa-home ml-1"></i> خانه &nbsp;&nbsp;&nbsp;&nbsp;
                   </a>
                   <a
-                    href="#"
+                    href="Account"
                     onClick={handleAccountClick}
                     className="text-gray-100 hover:text-purple-400 transition"
                   >
@@ -714,10 +714,10 @@
                     {isAuthenticated ? `پنل کاربری (${username})` : "حساب کاربری"}
                   </a>
                   <div className="flex items-center space-x-1">
-                    <a href="#" className="text-red-200 hover:text-purple-400 transition">
+                    <a href="Shop" className="text-red-200 hover:text-purple-400 transition">
                       <i className="fab fa-drupal ml-1"></i> محصولات&nbsp;&nbsp;&nbsp;
                     </a>
-                    <a href="#" className="text-green-500 hover:text-purple-400 transition">
+                    <a href="Order" className="text-green-500 hover:text-purple-400 transition">
                       <i className="fas fa-shopping-cart ml-1"></i> سبد خرید&nbsp;&nbsp;&nbsp;
                     </a>
                     <a href="search" className="text-pink-600 hover:text-purple-400 transition">
@@ -770,7 +770,7 @@
               </div>
 			  <div className="pt-10">
                   <div className="flex justify-center gap-4">
-                    <a href="#">
+                    <a href="NEMINO-APP">
                       <img
                         src="https://i.imgur.com/IXM1QNZ_d.webp?maxwidth=760&fidelity=grand"
                         alt="بازی نمینو"
